Class contructor and methods shouldn't have "arguments" and "caller" https://bugs.webkit.org/show_bug.cgi?id=144238

Reviewed by Ryosuke Niwa.

Source/JavaScriptCore:

Added TypeError that is raised in case of access to properties 'arguments' or 'caller'
of constructor or method of class.

* runtime/JSFunction.cpp:
(JSC::getThrowTypeErrorGetterSetter):
(JSC::JSFunction::getOwnPropertySlot):
* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::createThrowTypeErrorArgumentsAndCaller):
(JSC::JSGlobalObject::visitChildren):
* runtime/JSGlobalObject.h:
(JSC::JSGlobalObject::throwTypeErrorArgumentsAndCallerGetterSetter):
* runtime/JSGlobalObjectFunctions.cpp:
(JSC::globalFuncThrowTypeErrorArgumentsAndCaller):
* runtime/JSGlobalObjectFunctions.h:

LayoutTests:

* js/class-method-and-constructor-properties-expected.txt: Added.
* js/class-method-and-constructor-properties.html: Added.
* js/script-tests/class-method-and-constructor-properties.js: Added.

Canonical link: https://commits.webkit.org/175359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200321 268f45cc-cd09-0410-ab3c-d52691b4dbfc